# coursework-2

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Текст курсовой.docx
shaders/: icosphere.frag  icosphere.vert  sphere.frag  sphere.vert
src/: camera.cpp  camera.hpp  dirs.hpp.in  icosphere.cpp  icosphere.hpp  main.cpp  shader_program.cpp  shader_program.hpp  sphere.cpp  sphere.hpp  ui.cpp  ui.hpp
